--- a/STM32H747XI_test.ioc
+++ b/STM32H747XI_test.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,DCMI\:I
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,DCMI\:I,TIM14\:I,USART1\:I
 DCMI.FrameEndCode=0xFF
 DCMI.FrameStartCode=0xFF
 DCMI.IPParameters=JPEGMode,PCKPolarity,FrameStartCode,FrameEndCode,LineEndCode,LineStartCode
@@ -30,7 +30,29 @@ Dma.DCMI.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.DCMI.0.SyncRequestNumber=1
 Dma.DCMI.0.SyncSignalID=NONE
 Dma.Request0=DCMI
-Dma.RequestsNb=1
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.USART1_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.USART1_RX.1.Instance=DMA1_Stream1
+Dma.USART1_RX.1.MemBurst=DMA_MBURST_SINGLE
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -40,6 +62,8 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
+Mcu.IP10=TIM14
+Mcu.IP11=USART1
 Mcu.IP2=DCMI
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -48,32 +72,38 @@ Mcu.IP6=NVIC2
 Mcu.IP7=RCC
 Mcu.IP8=SYS_M4
 Mcu.IP9=SYS
-Mcu.IPNb=10
+Mcu.IPNb=12
 Mcu.Name=STM32H747XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PG10
 Mcu.Pin1=PD3
-Mcu.Pin10=PC6
-Mcu.Pin11=PH0-OSC_IN (PH0)
-Mcu.Pin12=PA6
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_M4_VS_Systick
+Mcu.Pin10=PC9
+Mcu.Pin11=PC7
+Mcu.Pin12=PC6
+Mcu.Pin13=PH0-OSC_IN (PH0)
+Mcu.Pin14=PA6
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_SYS_M4_VS_Systick
+Mcu.Pin17=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM14_VS_no_output1
 Mcu.Pin2=PC11
 Mcu.Pin3=PA14 (JTCK/SWCLK)
 Mcu.Pin4=PB3 (JTDO/TRACESWO)
 Mcu.Pin5=PA13 (JTMS/SWDIO)
 Mcu.Pin6=PB9
 Mcu.Pin7=PB8
-Mcu.Pin8=PC9
-Mcu.Pin9=PC7
-Mcu.PinsNb=15
+Mcu.Pin8=PA10
+Mcu.Pin9=PA9
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H747XIHx
 MxCube.Version=6.2.0
 MxDb.Version=DB.6.0.20
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC1.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -83,6 +113,7 @@ NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -95,6 +126,11 @@ NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=PinAttribute
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.PinAttribute=CortexM7
+PA10.Signal=USART1_RX
 PA13\ (JTMS/SWDIO).GPIOParameters=PinAttribute
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).PinAttribute=CortexM7
@@ -107,6 +143,11 @@ PA6.GPIOParameters=PinAttribute
 PA6.Mode=Slave_8_bits_Embedded_Synchro
 PA6.PinAttribute=CortexM7
 PA6.Signal=DCMI_PIXCLK
+PA9.GPIOParameters=PinAttribute
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.PinAttribute=CortexM7
+PA9.Signal=USART1_TX
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Mode=CRS SYNC Source GPIO
 PB3\ (JTDO/TRACESWO).PinAttribute=CortexM7
@@ -183,7 +224,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-MX_DMA_Init-DMA-false-HAL-true-CortexM7,3-SystemClock_Config-RCC-false-HAL-false-CortexM7,4-MX_DCMI_Init-DCMI-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-MX_DMA_Init-DMA-false-HAL-true-CortexM7,3-SystemClock_Config-RCC-false-HAL-false-CortexM7,4-MX_DCMI_Init-DCMI-false-HAL-true-CortexM7,5-MX_TIM14_Init-TIM14-false-HAL-true-CortexM7,6-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -227,7 +268,7 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=240000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,DSIFreq_Value,DSITXEscFreq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLDSIVCOFreq_Value,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,DSIFreq_Value,DSITXEscFreq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLDSIVCOFreq_Value,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -252,6 +293,7 @@ RCC.SPI6Freq_Value=120000000
 RCC.SWPMI1Freq_Value=120000000
 RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SupplySource=PWR_DIRECT_SMPS_SUPPLY
 RCC.Tim1OutputFreq_Value=240000000
 RCC.Tim2OutputFreq_Value=240000000
 RCC.TraceFreq_Value=480000000
@@ -265,8 +307,19 @@ RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
 SYS.userName=SYS_M7
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel,Prescaler,Period
+TIM14.Period=999
+TIM14.Prescaler=119
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_M4_VS_Systick.Mode=SysTick
 VP_SYS_M4_VS_Systick.Signal=SYS_M4_VS_Systick
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM14_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM14_VS_no_output1.Signal=TIM14_VS_no_output1
 board=custom
